Completed pagination part of backend-7
